--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Guy/Guy/bin/*
 MatchGame/MatchGame/bin/*
 PickACardUI/PickACardUI/bin/*
 PickRandomCard/PickRandomCard/bin/*
+Elephants/Elephants/bin/*
