--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ MatchGame/MatchGame/bin/*
 PickACardUI/PickACardUI/bin/*
 PickRandomCard/PickRandomCard/bin/*
 Elephants/Elephants/bin/*
+
+SloppyJoes/SloppyJoes/bin/*
