--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ PickRandomCard/PickRandomCard/bin/*
 Elephants/Elephants/bin/*
 
 SloppyJoes/SloppyJoes/bin/*
+
+Hi-Lo-Game/Hi-Lo-Game/bin/Debug/net6.0/ref/
+
+Hi-Lo-Game/Hi-Lo-Game/obj/
+
+Hi-Lo-Game/.vs/Hi-Lo-Game/DesignTimeBuild/
+
+Hi-Lo-Game/.vs/Hi-Lo-Game/v17/
+
+Hi-Lo-Game/Hi-Lo-Game/bin/Debug/net6.0/
+
+Hi-Lo-Game/.vs/Hi-Lo-Game/
